--- a/Instructions/PyCitySchools/PyCitySchools_Glo_analysis.ipynb
+++ b/Instructions/PyCitySchools/PyCitySchools_Glo_analysis.ipynb
@@ -952,7 +952,7 @@
     {
      "data": {
       "text/plain": [
-       "78.98537145774827"
+       "78.99"
       ]
      },
      "execution_count": 12,
@@ -962,7 +962,7 @@
    ],
    "source": [
     "#calculate average math score\n",
-    "average_math_score = school_data_complete_df[\"math_score\"].mean()\n",
+    "average_math_score = round(school_data_complete_df[\"math_score\"].mean(), 2)\n",
     "average_math_score"
    ]
   },
@@ -974,7 +974,7 @@
     {
      "data": {
       "text/plain": [
-       "81.87784018381414"
+       "81.88"
       ]
      },
      "execution_count": 13,
@@ -984,7 +984,7 @@
    ],
    "source": [
     "#calculate average reading score\n",
-    "average_reading_score = school_data_complete_df[\"reading_score\"].mean()\n",
+    "average_reading_score = round(school_data_complete_df[\"reading_score\"].mean(), 2)\n",
     "average_reading_score"
    ]
   },
@@ -996,7 +996,7 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "0.749808526933878"
       ]
      },
      "execution_count": 14,
@@ -1006,7 +1006,10 @@
    ],
    "source": [
     "# percent_passing_math\n",
-    "percent_passing_math = 0\n",
+    "count_passing_math = school_data_complete_df[(school_data_complete_df[\"math_score\"] >=70)].count()[\"Student ID\"]\n",
+    "count_passing_math\n",
+    "\n",
+    "percent_passing_math = count_passing_math / total_number_students\n",
     "percent_passing_math"
    ]
   },
@@ -1018,7 +1021,7 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "0.8580546336482001"
       ]
      },
      "execution_count": 15,
@@ -1028,8 +1031,12 @@
    ],
    "source": [
     "# percent_passing_reading\n",
-    "percent_passing_reading = 0\n",
-    "percent_passing_reading"
+    "count_passing_reading = school_data_complete_df[(school_data_complete_df[\"reading_score\"] >=70)].count()[\"Student ID\"]\n",
+    "count_passing_reading\n",
+    "\n",
+    "percent_passing_reading = count_passing_reading / total_number_students\n",
+    "percent_passing_reading\n",
+    "\n"
    ]
   },
   {
@@ -1040,7 +1047,7 @@
     {
      "data": {
       "text/plain": [
-       "0"
+       "0.6517232575950983"
       ]
      },
      "execution_count": 16,
@@ -1050,8 +1057,95 @@
    ],
    "source": [
     "# percent_overall_passing\n",
-    "percent_overall_passing =0\n",
+    "count_overall_passing= school_data_complete_df[(school_data_complete_df[\"math_score\"] >=70) & (school_data_complete_df[\"reading_score\"] >=70)].count()[\"Student ID\"]\n",
+    "count_overall_passing\n",
+    "\n",
+    "percent_overall_passing = count_overall_passing / total_number_students\n",
     "percent_overall_passing"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Total Schools</th>\n",
+       "      <th>Total Students</th>\n",
+       "      <th>Total Budget</th>\n",
+       "      <th>Average Math Score</th>\n",
+       "      <th>Average Reading Score</th>\n",
+       "      <th>Percent Passing Math</th>\n",
+       "      <th>Percent Passing Reading</th>\n",
+       "      <th>Overall Passing Rate</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>15</td>\n",
+       "      <td>39170</td>\n",
+       "      <td>24649428</td>\n",
+       "      <td>78.99</td>\n",
+       "      <td>81.88</td>\n",
+       "      <td>0.749809</td>\n",
+       "      <td>0.858055</td>\n",
+       "      <td>0.651723</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Total Schools  Total Students  Total Budget  Average Math Score  \\\n",
+       "0             15           39170      24649428               78.99   \n",
+       "\n",
+       "   Average Reading Score  Percent Passing Math  Percent Passing Reading  \\\n",
+       "0                  81.88              0.749809                 0.858055   \n",
+       "\n",
+       "   Overall Passing Rate  \n",
+       "0              0.651723  "
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#create district summary table\n",
+    "pyschool_summary_df = pd.DataFrame({\n",
+    "    \"Total Schools\": [total_number_schools],\n",
+    "    \"Total Students\": total_number_students,\n",
+    "    \"Total Budget\": total_budget,\n",
+    "    \"Average Math Score\": average_math_score,\n",
+    "    \"Average Reading Score\": average_reading_score,\n",
+    "    \"Percent Passing Math\": percent_passing_math,\n",
+    "    \"Percent Passing Reading\": percent_passing_reading,\n",
+    "    \"Overall Passing Rate\": percent_overall_passing\n",
+    "})\n",
+    "pyschool_summary_df\n",
+    "\n"
    ]
   },
   {
@@ -1085,33 +1179,36 @@
        "      <th>Total Budget</th>\n",
        "      <th>Average Math Score</th>\n",
        "      <th>Average Reading Score</th>\n",
-       "      <th>% Passing Math</th>\n",
-       "      <th>% Passing Reading</th>\n",
-       "      <th>% Overall Passing</th>\n",
+       "      <th>Percent Passing Math</th>\n",
+       "      <th>Percent Passing Reading</th>\n",
+       "      <th>Overall Passing Rate</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>15</td>\n",
-       "      <td>39170</td>\n",
-       "      <td>24649428</td>\n",
-       "      <td>78.985371</td>\n",
-       "      <td>81.87784</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>39,170</td>\n",
+       "      <td>$24,649,428</td>\n",
+       "      <td>78.99</td>\n",
+       "      <td>81.88</td>\n",
+       "      <td>74.98%</td>\n",
+       "      <td>85.81%</td>\n",
+       "      <td>65.17%</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Total Schools  Total Students  Total Budget  Average Math Score  \\\n",
-       "0             15           39170      24649428           78.985371   \n",
+       "   Total Schools Total Students Total Budget  Average Math Score  \\\n",
+       "0             15         39,170  $24,649,428               78.99   \n",
        "\n",
-       "   Average Reading Score  % Passing Math  % Passing Reading  % Overall Passing  \n",
-       "0               81.87784               0                  0                  0  "
+       "   Average Reading Score Percent Passing Math Percent Passing Reading  \\\n",
+       "0                  81.88               74.98%                  85.81%   \n",
+       "\n",
+       "  Overall Passing Rate  \n",
+       "0               65.17%  "
       ]
      },
      "execution_count": 18,
@@ -1120,18 +1217,13 @@
     }
    ],
    "source": [
-    "#create district summary table\n",
-    "district_summary_df = pd.DataFrame({\n",
-    "    \"Total Schools\": [total_number_schools],\n",
-    "    \"Total Students\": total_number_students,\n",
-    "    \"Total Budget\": total_budget,\n",
-    "    \"Average Math Score\": average_math_score,\n",
-    "    \"Average Reading Score\": average_reading_score,\n",
-    "    \"% Passing Math\": percent_passing_math,\n",
-    "    \"% Passing Reading\": percent_passing_reading,\n",
-    "    \"% Overall Passing\": percent_overall_passing\n",
-    "})\n",
-    "district_summary_df"
+    "#Format using .map and .format methods\n",
+    "pyschool_summary_df[\"Total Students\"] = pyschool_summary_df[\"Total Students\"].map(\"{:,}\".format)\n",
+    "pyschool_summary_df[\"Total Budget\"] = pyschool_summary_df[\"Total Budget\"].map(\"${:,.0f}\".format)\n",
+    "pyschool_summary_df[\"Percent Passing Math\"] = pyschool_summary_df[\"Percent Passing Math\"].map(\"{:.2%}\".format)\n",
+    "pyschool_summary_df[\"Percent Passing Reading\"] = pyschool_summary_df[\"Percent Passing Reading\"].map(\"{:.2%}\".format)\n",
+    "pyschool_summary_df[\"Overall Passing Rate\"] = pyschool_summary_df[\"Overall Passing Rate\"].map(\"{:.2%}\".format)\n",
+    "pyschool_summary_df"
    ]
   },
   {
@@ -1359,7 +1451,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.8.5"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
